--- a/test.yml
+++ b/test.yml
@@ -1,5 +1,7 @@
-test: /venv/bin/py.test /home/logi/repos/vizido.cloud/tests/unit/ /home/logi/repos/vizido.cloud/tests/functional/
+test: /usr/local/bin/pytest /home/logi/repos/testindicator/tests
 exclude_files:
   - email_list_test.txt
   - email_list.txt
+  - lastfailed
 exclude_dirs:
+notifications: false
