--- a/test.yml
+++ b/test.yml
@@ -1,4 +1,4 @@
-test: nosetests /home/logi/repos/testindicator/tests
+test: nosetests --nocapture /home/logi/repos/testindicator/tests
 exclude_files:
   - 'email_list_test.txt'
   - 'email_list.txt'
