--- a/test.yml
+++ b/test.yml
@@ -1,12 +1,11 @@
 test: /home/logi/.virtualenvs/testindicator/bin/nosetests --nocapture /home/logi/repos/testindicator/tests
 cwd: /home/logi/repos/testindicator
 exclude_files:
-  - 'email_list_test.txt'
-  - 'email_list.txt'
+  - 'ignore.me'
   - 'lastfailed'
   - '*.pyc'
 exclude_dirs:
   - .git
-  - ignore
+  - ignore_this_dir
 notifications: true
 verbose: true
